# CS461Rust

./: .gitattributes  .gitignore  BUILD_INSTRUCTIONS.txt  Cargo.toml  Makefile  README.md  _cat  _echo  _forktest  _grep  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _usertests  _wc  _zombie  kernel.ld  mkfs_bin  out.txt  rust-toolchain.toml  sign.pl  types_boot.h  user.ld
.cargo/: config.toml
boot/: bootmain.c
crates/arch/: Cargo.toml  build.rs
crates/arch/src/: elf.rs  ioapic.rs  lapic.rs  lib.rs  mmu.rs  mp.rs  registers.rs  traps.rs  vm.rs
crates/arch/src/asm/: bootasm.S  entry.S  entryother.S  initcode.S  swtch.S  trapasm.S  usys.S  vectors.S
crates/bootblock/: Cargo.toml  build.rs
crates/bootblock/src/: boot.ld  main.rs
crates/console/: Cargo.toml
crates/console/src/: lib.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: ide.rs  kbd.rs  lib.rs  memide.rs  uart.rs
crates/fs/: Cargo.toml
crates/fs/src/: bio.rs  buf.rs  file.rs  fs.rs  fsh.rs  lib.rs  log.rs  pipe.rs
crates/mm/: Cargo.toml
crates/mm/src/: kalloc.rs  lib.rs  memlayout.rs
crates/param/: Cargo.toml
crates/param/src/: lib.rs
crates/proc/: Cargo.toml
crates/proc/src/: exec.rs  lib.rs  proc.rs  proch.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  sleeplock.rs  sleeplockh.rs  spinlock.rs  spinlockh.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: lib.rs  sysfile.rs  sysproc.rs
crates/types/: Cargo.toml
crates/types/src/: date.rs  fcntl.rs  lib.rs  stat.rs  types.rs
crates/ulib/: Cargo.toml  build.rs
crates/ulib/src/: lib.rs  printf.rs  string.rs  ulib.rs  umalloc.rs
kernel/: Cargo.toml  build.rs  kernel
kernel/src/: glue.rs  main.rs
mkfs/: Cargo.toml
mkfs/.cargo/: config.toml
mkfs/src/: main.rs
user/: Cargo.toml
user/src/: cat.rs  echo.rs  forktest.rs  grep.rs  init.rs  kill.rs  ln.rs  ls.rs  main.rs  mkdir.rs  rm.rs  sh.rs  stressfs.rs  usertests.rs  wc.rs  zombie.rs
