[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arch     = { path = "../crates/arch" }
mm       = { path = "../crates/mm" }
proc     = { path = "../crates/proc" }
sync     = { path = "../crates/sync" }
param    = { path = "../crates/param" }
types    = { path = "../crates/types" }
fs       = { path = "../crates/fs" }
drivers  = { path = "../crates/drivers" }
console  = { path = "../crates/console" }
syscall  = { path = "../crates/syscall" }
