[package]
name = "proc"
version = "0.1.0"
edition = "2024"

[lib]
test = false
doctest = false
bench = false

[dependencies]
types = { path = "../types" }
param = { path = "../param" }
# `arch` is the kernel's hardware-abstraction crate; its `registers`
# module ports `x86.h`. Reach for it as `arch::registers::xchg`, etc.
arch = { path = "../arch" }